Version 3.0.x beta (...)
* Fixed query.html. rcon commands would not work.
* Fixed function.sortheader.php and removed hardcoded themes path.

Version 3.0.5 beta (2007-03-10)
* Fixed "constant CACHE_FILE_GROUP already defined" errors
* Fixed PS::Config->set(); would not set sub vars (var.subvar = value)
* Fixed event plrtrigger 'address'; would not track player IP addresses
+ Implemented game support for halflife:natural (Natural Selection)
* Bug #8 fixed (I hope). "Duplicate entry in 'plr_ids' table"
* Bug #9 fixed. "Only variables can be passed by reference in imgcommon.php"
+ Added a couple of batch files for Windows users. These are just
shortcuts for a couple of common tasks for stats.pl.
+ Added 'dod_teamscore' event so that win/loses for non-source DOD servers
will properly track for players and maps.
+ Added 'round_win' event trigger for 'dod' servers.
+ Directory structure has changed a bit to try and make it less confusing
for users. The 'upload' directory contains all files meant to be uploaded to
a website (this used to be called 'web'). Everything else stays local.
+ The 'live servers' configuration has been moved into it's own table to 
make it easier to manage.
* Fixed bug with installer on step 1. Incorrectly saying mysql 4.1.11 was
too low when in fact it's the minimum.
+ Fixed stats update from crashing when no regex clantags are defined.
* Fixed 'czero' servers in the live server view to show maps correctly.
* Fixed 'white screen' problems on certain pages when run on PHP5.
* Corrected 'kill_streak' and 'death_streak' calculation in awards.
* Fixed team detection for players w/o the need for 'joined_team' events.
* Fixed player bonuses. Bonus points were not actually being added to skill.
* Fixed load_clan_members(); SQL query was not optimized properly and causes 
the 'edit clan' page to be very slow with large member lists.
* Fixed 'weaponstats' accuracy triggers for Natural Selection. Event wasn't
being delegated properly.