@@ -5,6 +5,7 @@ BEGIN {
   use FindBin; 
   use lib $FindBin::Bin;
   use lib $FindBin::Bin . "/lib";
+  use lib $FindBin::Bin . "/../lib";
 #  use lib "./lib";
 }
 
